Fixed overflow issue

--- a/src/components/Highlighter/Highlighter.scss
+++ b/src/components/Highlighter/Highlighter.scss
@@ -1,6 +1,6 @@
 .prism-code {
   padding: 20px;
-  overflow: scroll;
+  overflow: auto;
   max-height: 50vh;
 
   &.inline {
